--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.gradient-01 {
+  background: linear-gradient(180deg, #fff, #f7f3f17a);
+  background-repeat: no-repeat;
+}
+
+.highlighted {
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 50%, #ffd0ae 30%);
+}
