--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .btn-red {
+    @apply text-white bg-main-red hover:bg-red-dark 
+    font-medium rounded-full text-sm px-5 py-2.5 text-center mr-2 my-2 mb-2 duration-200;
+  }
+  .card {
+    @apply bg-white max-w-sm rounded-lg shadow-md;
+  }
+
+  .how-works-bg {
+    @apply flex flex-col gap-4 text-center justify-between items-center p-4 leading-normal;
+  }
+
+  .how-works-icon {
+    @apply h-20 w-20 p-4 text-main-red rounded-3xl bg-main-red bg-opacity-10;
+  }
+}
+
 .gradient-01 {
   background: linear-gradient(180deg, #fff, #f7f3f17a);
   background-repeat: no-repeat;
